bisonc++ (4.06.00) 

  * Repaired buggy handling of some options/directives

  * Prevented spurious option warnings sometimes generated when options aren't
    specified 

  * Action blocks associated with rules may contain raw string literals.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 09 Feb 2014 11:31:14 +0100

bisonc++ (4.05.00) 

  * Added the directive %scanner-class-name specifying the class name of the
    scanner to use in combination with the %scanner directive

  * re-installed the --namespace option (see the next item)

  * Warnings are issued when options or directives are specified wchich are
    ignored because the target file (e.g., parser.h, parser.ih) already
    exists. These warnings are not issued for parse.cc and parserbase.h, which
    are by default rewritten at each bisonc++ run. These warnings are issued
    for the `class-header', `class-name', `baseclass-header', `namespace', 
    `scanner', `scanner-class-name' and `scanner-token-function' 
    options/directives.

  * The --force-class-header and --force-implementation-header options were 
    removed: 'rm ...' should be used instead.

  * man-page and manual updated

  * CLASSES class dependencies updated, icmconf's USE_ALL activated

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 10 Aug 2013 10:16:17 +0200

bisonc++ (4.04.01) 

  * Removed the possibility to specify path names for the --baseclass-header,
    --class-header, --implementation-header, and --parsefun-source options
    (and corresponding directives). Path names for generated files should be
    specified using the target-directory option or directive.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 27 May 2013 12:12:58 +0200

bisonc++ (4.04.00) 

  * Repaired %target-directory not recognizing path-characters and not
    removing surrounding "-delimiters.

  * The --baseclass-header, --class-header, --implementation-header, and
    --parsefun-source options (and corresponding directives) now also accept