@@ -1,2 +1,2 @@
-#define VERSION "4.06.00"
+#define VERSION "4.07.00"
 #define YEARS   "2005-2014"
