@@ -1,12 +1,17 @@
 #include "generator.ih"
 
-void Generator::warnExisting(string const &fileName, string const &option,
+bool Generator::errExisting(string const &fileName, string const &option,
                              string const &pattern) const
 {
     if (not d_options.specified(option))
-        return;
+        return false;
 
     if (not grep(fileName, pattern))
-        wmsg << '`' << fileName << 
+    {
+        emsg << '`' << fileName << 
             "' exists, option/directive `" << option << "' ignored" << endl;
+        return true;
+    }
+    
+    return false;
 }
